feat: modificando cores

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 
 <head>
+  <link href="https://fonts.cdnfonts.com/css/seven-segment" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
 
 <body>
   <header>T34 Rulez!</header>
+  <main>
   <div class="cronometro">
     <span id="cronometro-minutos">00</span>:<span id="cronometro-segundos">00</span>:<span
       id="cronometro-milisegundos">000</span>
@@ -21,6 +23,8 @@
     <button id="temporizador-pausar">Pausar</button>
     <button id="temporizador-resetar">Resetar</button>
   </div>
+  </main>
+  <footer>Developed by L.G.1979 & Dalmoddn</footer>
 </body>
 
 </html>
