--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <link href="https://fonts.cdnfonts.com/css/seven-segment" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -8,13 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-
 <body>
   <header>T34 Rulez!</header>
   <main>
   <div class="cronometro">
-    <span id="cronometro-minutos">00</span>:<span id="cronometro-segundos">00</span>:<span
-      id="cronometro-milisegundos">000</span>
+    <h3 id="cronometro-tempo">00:00:00</h3>
   </div>
   <div class="temporizador">
     <input type="number" name="temporizador-minutos" min="0" max="59" step="1" value="0">
